--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-feather": "^2.0.8",
     "react-modal": "^3.11.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
