--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.3.0",
     "bootstrap": "^4.5.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-feather": "^2.0.8",
+    "react-icons": "^3.10.0",
     "react-modal": "^3.11.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
