--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "http://farkoweb.com",
+  "homepage": "https://farkoweb.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
